--- a/Product-Accounting-System/MainWindow.xaml
+++ b/Product-Accounting-System/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="750">
     <Grid>
-        <Frame x:Name="MainFrame">
+        <Frame x:Name="MainFrame" Source="Pages/ProductManagerPage.xaml">
             
         </Frame>
     </Grid>
