--- a/Product-Accounting-System/App.xaml
+++ b/Product-Accounting-System/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:Product_Accounting_System"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary >
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/MainDictionary.xaml"></ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
